--- a/src/app/Profile/ProfileComponents/BioCard/BioCard.module.css
+++ b/src/app/Profile/ProfileComponents/BioCard/BioCard.module.css
@@ -7,7 +7,7 @@
   height: 20vh;
   overflow: hidden;
   font-family: "N-light";
-  font-size: 14px;
+  font-size: 2vh;
   letter-spacing: 0.02rem;
   line-height: 110%;
 }
